--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,8 @@ fabric.properties
 # Editor-based Rest Client
 .idea/httpRequests
 .idea/
+.idea/*
+.idea
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
